Add slides presenting hpp, showcase page and update navigation bar

--- a/_includes/nav_bar.html
+++ b/_includes/nav_bar.html
@@ -18,12 +18,12 @@
 					<ul class="dropdown-menu">
             <li class="dropdown-header">Features</li>
             <!--{% include nav_element.html title="Showcase" url="/showcase.html" %}-->
-            {% include nav_element.html title="To come" url="#" %}
+            {% include nav_element.html title="Presentation" url="/assets/hpp-presentation.pdf" %}
+            {% include nav_element.html title="Showcase" url="/showcase.html" %}
 						<li class="divider"></li>
 						<li class="dropdown-header">Documentation</li>
-						{% include nav_element.html title="API" url="/api/hpp-doc/index.html" %}
-            <!--{% include nav_element.html title="Mathematical formulations" url="/assets/math-concepts.pdf" %}-->
 						{% include nav_element.html title="Getting Started" url="/getting-started.html" %}
+						{% include nav_element.html title="API" url="/api/hpp-doc/index.html" %}
 					</ul>
 				</li>
 
