--- a/_includes/nav_bar.html
+++ b/_includes/nav_bar.html
@@ -11,7 +11,7 @@
 		</div>
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav">
-				{% include nav_element.html title="<span class='glyphicon glyphicon-download'></span> Download" url="/download.html" %}
+				{% include nav_element.html title="<span class='glyphicon glyphicon-download'></span> Download" url="/getting-started.html#installation" %}
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-book"></span>
 						Documentation <b class="caret"></b></a>
@@ -23,6 +23,7 @@
 						<li class="divider"></li>
 						<li class="dropdown-header">Documentation</li>
 						{% include nav_element.html title="Getting Started" url="/getting-started.html" %}
+            {% include nav_element.html title="Tutorials" url="/getting-started.html#tutorial_1" %}
 						{% include nav_element.html title="API" url="/api/hpp-doc/index.html" %}
 					</ul>
 				</li>
