Fix content, add logos and images

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,10 +13,10 @@
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
     <!-- Jekyll Syntax Highlighting -->
-    <link href="syntax.css" rel="stylesheet">
+    <link href="{{ site.baseurl }}/syntax.css" rel="stylesheet">
 
     <!-- Website specific stylesheet -->
-    <link href="style.css" rel="stylesheet">
+    <link href="{{ site.baseurl }}/style.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -64,7 +64,7 @@
 
     </script>
 
-    <script type="text/javascript" src="js/oauth.min.js"></script>
+    <script type="text/javascript" src="{{ site.baseurl }}/js/oauth.min.js"></script>
 
     <!-- favicons generated with http://realfavicongenerator.net -->
     <link rel="shortcut icon" href="assets/favicons/favicon.ico">
@@ -93,7 +93,7 @@
     <meta property="og:title" content="{{ page.title }}">
     <meta property="og:site_name" content="Humanoid Path Planner">
     <meta property="og:description" content="Motion and Manipulation planning software">
-    <meta property="og:url" content="{{ site.url }}">
+    <meta property="og:url" content="{{ site.baseurl }}">
     <meta property="og:locale" content="en_US">
 
     <!--<meta property="fb:page_id" content="234139373456687">-->
