--- a/_includes/nav_bar.html
+++ b/_includes/nav_bar.html
@@ -7,7 +7,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="index.html">{{ site.name }}</a>
+      <a class="navbar-brand" href="{{ site.baseurl }}/index.html">{{ site.name }}</a>
 		</div>
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav">
