--- a/_includes/nav_bar.html
+++ b/_includes/nav_bar.html
@@ -11,7 +11,14 @@
 		</div>
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav">
-				{% include nav_element.html title="<span class='glyphicon glyphicon-download'></span> Download" url="/getting-started.html#installation" %}
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-education"></span>
+						Getting started <b class="caret"></b></a>
+					<ul class="dropdown-menu">
+            {% include nav_element.html title="Download and Install" url="/download.html" %}
+            {% include nav_element.html title="Tutorials" url="/tutorials.html" %}
+					</ul>
+				</li>
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-book"></span>
 						Documentation <b class="caret"></b></a>
@@ -21,20 +28,18 @@
             {% include nav_element.html title="Presentation" url="/assets/hpp-presentation.pdf" %}
             {% include nav_element.html title="Showcase" url="/showcase.html" %}
 						<li class="divider"></li>
-						<li class="dropdown-header">Documentation</li>
-						{% include nav_element.html title="Getting Started" url="/getting-started.html" %}
-            {% include nav_element.html title="Tutorials" url="/getting-started.html#tutorial_1" %}
-						{% include nav_element.html title="API" url="/api/hpp-doc/index.html" %}
+            <!--<li class="dropdown-header">Documentation</li>-->
+						{% include nav_element.html title="API documentation" url="/documentation.html" %}
 					</ul>
 				</li>
 
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-wrench"></span>
-							Development <b class="caret"></b></a>
+							Advanced users <b class="caret"></b></a>
 					<ul class="dropdown-menu">
-						<!-- {% include nav_element.html title="Development Dashboard" url="/development.html" %}
-						<li class="divider"></li> -->
-						<li><a href="{{site.github-url}}">View on GitHub</a></li>
+            {% include nav_element.html title="Euroc challengers" url="/euroc-instructions.html" %}
+            {% include nav_element.html title="Contributing" url="/contributing.html" %}
+            <!--{% include nav_element.html title="Factory in a Day" url="" %}-->
 					</ul>
 				</li>
 
