Reuse main page protocol (avoid mixed active content)

--- a/_includes/carrousel.html
+++ b/_includes/carrousel.html
@@ -56,7 +56,7 @@
 
 <!-- Load custom slider style -->
 <link rel="stylesheet" href="slider.css" type="text/css">
-<script src="http://a.vimeocdn.com/js/froogaloop2.min.js"></script>
+<script src="//a.vimeocdn.com/js/froogaloop2.min.js"></script>
 
 <!-- Load YouTube player -->
 <script src="js/flexslider-youtube.js"></script>
